syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Challenges.Requests";

import "challenges_enums.proto";
import "shared_enums.proto";

package edoxa.services.challenges;

message FetchChallengesRequest {
  shared.enums.Game game = 1;
  ChallengeState state = 2;
}

message FindChallengeRequest {
  string challengeId = 1;
}

message CreateChallengeRequest {
  string name = 1;
  shared.enums.Game game = 2;
  shared.enums.ChallengeType type = 3;
  int32 bestOf = 4;
  int32 entries = 5;
  int32 duration = 6;
  map<string, float> scoring = 7;
}

message SynchronizeChallengeRequest {
  shared.enums.Game game = 1;
}

message RegisterChallengeParticipantRequest {
  string challengeId = 1;
  string participantId = 2;
  string gamePlayerId = 3;
}